kbd-chooser (1.12) UNRELEASED; urgency=low

  * Colin Watson
    - Use AT keymaps on amd64 systems with USB keyboards, as was already
      done on i386.

 -- Colin Watson <cjwatson@debian.org>  Fri, 15 Apr 2005 14:41:48 +0100

kbd-chooser (1.11) unstable; urgency=high

  * Sven Luther
     - Modified grep in kbd-chooser.c, so we can now detect if a console=tty0
       is present after a console=tty[sS] in /proc/cmdline, so kbd-chooser
       doesn't wrongly think we are on a serial console.
  * Frans Pop
    - Delete redundant call to check_if_serial_console in main.

 -- Sven Luther <luther@debian.org>  Sun, 20 Mar 2005 18:03:00 +0100

kbd-chooser (1.10) unstable; urgency=high

  * Joey Hess
     - Patch from Eugeniy Meshcheryako to do the same for Ukrainian keymap
       as was earlier done for other non-unicode, non-latin-1 languages 
       in version 1.05. Closes: #296264

 -- Joey Hess <joeyh@debian.org>  Tue, 22 Feb 2005 11:57:11 -0500

kbd-chooser (1.09) unstable; urgency=low

  * Joey Hess
    - Apply "patch 1" from fjp to skip looking at varying Driver field
      when detecting usb keyoards. Closes: #248855

 -- Joey Hess <joeyh@debian.org>  Tue,  7 Dec 2004 17:59:07 -0500

kbd-chooser (1.08) unstable; urgency=high

  * Joey Hess
    - Adding new questions to critical priority at this point breaks
      existing preseed setups, so undid Colin's change from the last version.
      Derived distros will have to deal with it in their own way until after
      sarge.
    - Add a note to TODO about this.

 -- Joey Hess <joeyh@debian.org>  Wed, 10 Nov 2004 12:22:26 -0500

kbd-chooser (1.07) unstable; urgency=high

  * Frans Pop
    - usb-kbd.c: several fixes:
      - Fix recognition of usb keyboards (actually add to and return the list)
      - Add recognition of usb keyboards behind an usbhid
      - Display AT-keymaps for usb keyboards on i386 and powerpc (prep & chrp)
      - Added some debug output to help trace problems; can be cleaned later