@@ -55,9 +55,9 @@ kbd_t *at_kbd_get (kbd_t *keyboards, const char *subarch)
 	 *
 	 */
 	if (check_dir ("/proc/bus/input")) {
-		if ((grep ("/proc/bus/input/devices","AT Set ") == 0) ||
-		    (grep ("/proc/bus/input/devices","AT Translated Set") == 0) ||
-		    (grep ("/proc/bus/input/devices","AT Raw Set") ==0))
+		if ((grep ("/proc/bus/input/devices","AT Set ") > 0) ||
+		    (grep ("/proc/bus/input/devices","AT Translated Set") > 0) ||
+		    (grep ("/proc/bus/input/devices","AT Raw Set") > 0))
 			k->present = TRUE;
 		else
 			k->present = FALSE;
