@@ -3,6 +3,8 @@ kbd-chooser (1.12) UNRELEASED; urgency=low
   * Colin Watson
     - Use AT keymaps on amd64 systems with USB keyboards, as was already
       done on i386.
+    - Fix broken keymap detection on most architectures due to changed
+      semantics of grep().
 
  -- Colin Watson <cjwatson@debian.org>  Fri, 15 Apr 2005 14:41:48 +0100
 
